# hebi-cpp-examples

kits/igor2/: igor2_demo.cpp
kits/igor2/components/: arm.cpp  arm.h  body.cpp  body.h  chassis.cpp  chassis.h  configuration.cpp  configuration.h  igor.cpp  igor.h  joystick_interface.cpp  joystick_interface.h  leg.cpp  leg.h
projects/cmake/igor2/: CMakeLists.txt
util/: affine3d.h  rotation.h
util/input/: event_handler.cpp  event_handler.h  joystick.cpp  joystick.h  joystick_mapper.cpp
